--- a/public/css/room.css
+++ b/public/css/room.css
@@ -27,12 +27,17 @@
 }
 
 .cell{
-    max-height:100px;
     text-align:left;
     display:flex;
     vertical-align: middle;
     flex-wrap:wrap;
     margin-top:20px;
+    justify-content:space-between;
+}
+
+.cellSepa{
+    flex-shrink: 0; 
+    width:25px;
 }
 
 .cellImg, .cellText{
@@ -42,13 +47,14 @@
 }
 
 .cellImg{
-    width:25px;
-    height:25px;
+    width:50px;
+    height:50px;
+    flex-shrink: 0; 
     margin:auto;
 }
 
-.cellSepa{
-    width:20px;
+.cellText{
+    padding: 15 10 15 10;
 }
 
 .cellData{
@@ -59,6 +65,6 @@
 
 .cellName{
     width:100%;
-    margin-left:50px;
+    margin-left:75px;
     font-size:10px;
 }
